--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@ $(function () {
     recognition.continuous = true;
     recognition.interimResults = false;
     recognition.onresult = function (event) {
-        var txtRec = '';
+        var recorded = '';
         for (var i = event.resultIndex; i < event.results.length; ++i) {
-                txtRec += event.results[i][0].transcript;
+                recorded += event.results[i][0].transcript;
         }
-        const recorded = textRec;
-        recorded = recorded.charAt(0).toUpperCase() + recorded.slice(1);
-        console.log(recorded);
         $('#text').val($('#text').val() + recorded + ".");
         console.log(recorded);
+
     }
   
   $('#startRecognition').click(function () {
@@ -44,7 +42,6 @@ Requirements: Recent enough chrome for webspeechapi implementation<br>
 Known issues: Don't navigate away from page. To refresh close tab and reopen<br><br>
 <button id="startRecognition">Start Listening</button>
 <button id="stopRecognition">Stop Listening</button><br>
-<!--<select id="voiceSelect"></select>-->
 <textarea id="text" style="left: 0; width: 50vw; height: 25vh;"></textarea>
 </body>
 </html>
